sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:84: error: not found: value origPos
    if (pos == origPos) nouvPos = mod(origPos+1, nbPos);
               ^SelectBaseball:84: error: not found: value origPos
    if (pos == origPos) nouvPos = mod(origPos+1, nbPos);
                                      ^